Ex06: Testcases for linker

--- a/own_testcases/c/Makefile
+++ b/own_testcases/c/Makefile
@@ -1,15 +1,20 @@
 CC=gcc
-CFLAGS=-fno-asynchronous-unwind-tables -fno-exceptions -m64 -masm=intel -O0
+CFLAGS=-pedantic -std=c99 -fno-asynchronous-unwind-tables -fno-exceptions -m64 -masm=intel -O0
 SRC=$(wildcard *.c)
 ASM=$(patsubst %.c,%.s,$(SRC))
+BIN=$(patsubst %.c,%.out,$(SRC))
 
 .PHONY: all clean
 
 
-all: $(ASM)
+all: $(ASM) $(BIN)
 
 clean:
-	rm -rf $(ASM)
+	rm -rf $(ASM) $(BIN)
+
+
+%.out: %.c
+	$(CC) $(CFLAGS) -o $@ $<
 
 
 %.s: %.c
